force-app/main/default/objects/Day_Tracking__c/Day_Tracking__c.object-meta.xml
<CustomObject>
    <label>Day Tracking</label>
    <nameField>
        <label>Days Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Day Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>