force-app/main/default/objects/Day_Tracking__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Day Trackings</relationshipLabel>
    <relationshipName>Day_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>