force-app/main/default/objects/Day_Tracking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Contact - Follow-up</fullName>
            </value>
            <value>
                <fullName>Sobha Landline - Contacted</fullName>
            </value>
            <value>
                <fullName>WhatsApp - Contacted</fullName>
            </value>
            <value>
                <fullName>Email - Contacted</fullName>
            </value>
            <value>
                <fullName>Official Mobile - Contacted</fullName>
            </value>
            <value>
                <fullName>Official Landline - Contacted</fullName>
            </value>
            <value>
                <fullName>WhatsApp Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>